--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,20 +7,26 @@
 </head>
 <body>
   <h2>Final Exam</h2> 
-  <form method="POST">
-    <label for="truePositive">True Positive: </label> <br>
-    <input class="input" type="number" id="truePositive" name="true-positive" /> <br>
+  <form method="POST" id="form" action="../back-end/script.php" method="post">
+    <div id="error"></div>
+    <label for="truePositive">True Positive: </label><span class="error"></span> <br>
+    <input  class="input" type="number" id="truePositive" name="tp" required /> <br>
 
     <label for="falseNegative">False Negative: </label> <br>
-    <input class="input" type="number" id="falseNegative" name="false-negative" /> <br>
+    <input  class="input" type="number" id="falseNegative" name="fn" required/> <br>
 
-    <label for="falsePositive">False Positive: </label> <br>
-    <input class="input" type="number" id="falsePositive" name="false-positive" /> <br>
+    
 
     <label for="trueNegative">True Negative: </label> <br>
-    <input class="input" type="number" id="trueNegative" name="true-negative" /> <br>
+    <input  class="input" type="number" id="trueNegative" name="tn" required/> <br>
 
-    <input class="sub" type="submit">
+    <label for="falsePositive">False Positive: </label> <br>
+    <input  class="input" type="number" id="falsePositive" name="fp" required/> <br>
+
+    <button class="sub" type="submit">Submit</button>
+  </form>
+  <form action="../back-end/script2.php" method="POST">
+    <button type="submit">Display</button>
   </form>
 
   <script src="script.js" type="text/javascript"></script>
